fix: fix gap in burger menu

--- a/christmas-shop/src/js/components/header/header.module.scss
+++ b/christmas-shop/src/js/components/header/header.module.scss
@@ -79,6 +79,7 @@
     & {
       flex-direction: column;
       justify-content: center;
+      gap: 32px;
     }
   }
 }
